--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ description: "Moonrise is a fresh take on the classic Moon"
 reading_time: true
 words_per_minute: 200
 logo: "assets/img/logo.png"
-background: "assets/img/placeholder-big.jpg"
+background: "assets/img/moonrise-background.jpg"
 tiled_bg: false # Set this true if you want to tile your background image, otherwise it will be covered
 locale: en_US
-url: https://tolgattli.github.io/Moon
+url: https://tolgattli.github.io/Moonrise
 
 # Jekyll
 permalink: /:title/
@@ -26,7 +26,6 @@ sass:
     style: compressed
 
 # Comments
-disqus_shortname: taylantatli
 
 # Social
 # if you don't have any of social below, comment the line.
