--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site
-title: Moonrise
+title: Natasha Mattson
 bio: "Minimal, one column jekyll theme."
 description: "Moonrise is a fresh take on the classic Moon"
-reading_time: true
+reading_time: false
 words_per_minute: 200
-logo: "assets/img/logo.png"
+logo: "assets/img/natasha.png"
 background: "assets/img/moonrise-background.jpg"
 tiled_bg: false # Set this true if you want to tile your background image, otherwise it will be covered
 locale: en_US
-url: https://TolgaTatli.github.io/Moonrise
+url: https://natashamm.github.io
 
 # Jekyll
 permalink: /:title/
@@ -37,19 +37,19 @@ sass:
 #ad-slot:
 #bing-verify:
 #email:
-twitter: username
-facebook: username
-github-url: username
+#twitter: username
+#facebook: username
+github-url: natashamm
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:          natashamattson
 #xing:              username
-instagram: username
+#instagram: username
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam: username
+#steam: username
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
