change descrition from moon

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title: Natasha Mattson
-bio: "Minimal, one column jekyll theme."
+bio: "Python data developer based in Vancouver, BC."
 description: "Moonrise is a fresh take on the classic Moon"
 reading_time: false
 words_per_minute: 200
