--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: "assets/img/logo.png"
 background: "assets/img/moonrise-background.jpg"
 tiled_bg: false # Set this true if you want to tile your background image, otherwise it will be covered
 locale: en_US
-url: https://TolgaTatli.github.io/Moonrise
+url: https://aradfarahani.github.io/
 
 # Jekyll
 permalink: /:title/
@@ -37,13 +37,13 @@ sass:
 #ad-slot:
 #bing-verify:
 email: aradfarahani@aol.com
-twitter: https://x.com/aradfarahani
+twitter: aradfarahani
 #facebook: username
-github-url: https://github.com/aradfarahani/
+github-url: aradfarahani
 #stackoverflow: 123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin: https://www.linkedin.com/in/aradfarahani/
+linkedin: aradfarahani
 #xing: username
-instagram: username
+instagram: arad.farahani
 #lastfm: username
 #tumblr: username
 #medium: '@username'
