--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: "assets/img/logo.png"
 background: "assets/img/moonrise-background.jpg"
 tiled_bg: false # Set this true if you want to tile your background image, otherwise it will be covered
 locale: en_US
-url: https://aradfarahani.github.io/
+url: https://aradfarahani.com/
 
 # Jekyll
 permalink: /:title/
