--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title: Mahdi Farmahini Farahani (Arad)
 bio: "Undergraduate Geology Student @ KhU"
-description: "I’m a creative undergraduate Geology student with a passion for Hydrology/Hydrogeology, Climate Change, Geophysics, and Remote Sensing.I thoroughly enjoy Data Analysis and Data Visualization in Python."
+description: "Undergraduate Geology Student @ KhU who is interested in Python and Data Science"
 reading_time: true
 words_per_minute: 200
 logo: "assets/img/logo.png"
