--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title: Mahdi Farmahini Farahani (Arad)
+title: Mahdi Farmahini Farahani
 bio: "Undergraduate Geology Student @ KhU"
 description: "Undergraduate Geology Student @ KhU who is interested in Python and Data Science"
 reading_time: true
