--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-title: Moonrise
-bio: "Minimal, one column jekyll theme."
+title: The Unschooled Network
+bio: "An open marketplace for ideas."
 description: "Moonrise is a fresh take on the classic Moon"
 reading_time: true
 words_per_minute: 200
